# c-checkers-api-master-renamed

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake
examples/: BuildGameTree  BuildGameTree.cpp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: CMakeLists.txt  CTestTestfile.cmake  Checker.h  CheckersGame.cpp  CheckersGame.h  CheckersGameApi.cpp  CheckersGameApi.h  EngineDefine.h  Makefile  TreeBoard.cpp  TreeBoard.h  cmake_install.cmake
test/: CMakeLists.txt  CTestTestfile.cmake  CheckersApiTest  CheckersApiTest.cpp  CheckersTest.cpp  CheckersTests  Makefile  cmake_install.cmake
